2021 Updates from Student Site Boilerplate

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Description here" />
 	<title>Student Site Boilerplate</title>
+	<!--
+		Webpack will automatically link your CSS file for you.
+		Work in the src/css/styles.scss file.
+	-->
 </head>
 <body>
 	<main class="content-container">
@@ -73,5 +77,9 @@
 			<p>Special thanks to <a href="https://staticsiteboilerplate.com/">Static Site Boilerplate</a>, which this repository is based on.</p>
 		</aside>
 	</main>
+	<!--
+		Webpack will automatically link your JS file for you.
+		Work in the src/js folder.
+	-->
 </body>
 </html>
